# Agent-Hub

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  TODO.md  agent-hub.config.example.json  agent-hub.config.json  agent-hub.config.json.2026-05-21T02-18-27-841Z.bak  agent-hub.config.json.2026-05-21T21-08-13-013Z.bak  agent-hub.config.json.2026-05-25T15-40-58-741Z.bak  balanced_50row_execution_results.md  balanced_readiness_report.md  cloud_provider_certification.md  commitment_measurement_implementation.md  cost_quota_preflight.md  docker-compose.yml  execution_dashboard.md  execution_dashboard_status.md  execution_readiness_report.md  execution_readiness_report_v2.md  execution_readiness_report_v3.md  experiment_runner.md  frozen_panel_executor.md  gar_implementation.md  gct_50row_execution_results.md  gct_50row_instrumentation_coverage.md  gct_50row_quarantine_report.md  gct_50row_readiness_report.md  install-extension.ps1  install-extension.sh  install.bat  install.ps1  install.sh  instrumentation_architecture.md  instrumentation_validator.md  intervention_framework.md  pilot_rerun_results.md  provider_architecture.md  (+16 more)
Agent-Hub-main/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  agent-hub.config.example.json  install-extension.sh  install.ps1  install.sh  pyproject.toml  release.json  start-agent-hub.ps1
agent_hub/: __init__.py  __main__.py  adaptive.py  agent_runner.py  agent_tools.py  anonymous_proof.py  boost.py  capabilities.py  cli.py  commands_config.py  commands_doctor.py  commands_observability.py  commands_plugins.py  commands_provider.py  commands_server.py  config.py  config_migration.py  config_reference.py  context.py  debug.py  demo.py  dependency_audit.py  discovery.py  enterprise.py  events.py  explainability.py  hub.py  inbox.py  learning_proof.py  mcp.py  measurement.py  middleware.py  models.py  observability.py  observability_export.py  openapi.py  output_validator.py  payloads.py  permissions.py  proof_artifacts.py  (+29 more)
benchmarks/: manifest.json
deploy/: docker-compose.providers.yml
docs/: ARCHITECTURE.md  CLAUDE_CODE.md  CLINE.md  OLLAMA.md  PERMISSIONS.md  PRIVACY_SECURITY.md  PUBLISHING.md  TOKEN_OPTIMIZATION.md  TROUBLESHOOTING.md  adaptive-workspace-intelligence.md  api-compatibility.md  api.md  architecture-audit-routing-intelligence.md  architecture-modernization-phase0.md  architecture-modernization-phase05.md  architecture-modernization-phase1.md  architecture-modernization-phase15.md  architecture-modernization-phase16.md  architecture-modernization-phase17.md  architecture.md  mcp.md  (+30 more)
(+867 files in other folders)
