[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hub"
version = "0.3.0"
description = "Local routing hub with Codex-style workspace chat, provider failover, and team-agent orchestration."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agent Hub" }]
dependencies = []

[project.scripts]
agent-hub = "agent_hub.cli:main"

[tool.setuptools.packages.find]
include = ["agent_hub*"]
