[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-hub"
version = "0.9.2"
description = "Local-first AI model router for Cline, Codex, Claude Code, free-model routing, and cost-saving workspace agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Agent Hub" }]
dependencies = [
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
]
release = [
  "build>=1.2",
  "packaging>=24.0",
]
test = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-timeout>=2.3",
]

[project.scripts]
agent-hub = "agent_hub.cli:main"

[tool.setuptools.packages.find]
include = ["agent_hub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 120
timeout_method = "thread"
markers = [
  "unit: fast isolated tests that do not start HTTP servers or package artifacts",
  "integration: tests that exercise HTTP servers, workflows, stress paths, or cross-module behavior",
  "stress: opt-in stress tests that exercise many routed requests or concurrency",
  "packaging: release, VSIX, backend snapshot, version, and packaging checks",
]
